src/objects/FEP__c.object
<CustomObject>
    <fields>
        <fullName>Fuel_Management_Notes__c</fullName>
        <description>Notes for Bulk/Private Site Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Bulk/Private Site Follow Up</inlineHelpText>
        <label>Fuel Managment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fuel_Notes__c</fullName>
        <description>Notes for Fuel follow up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Fuel follow up</inlineHelpText>
        <label>Fuel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Have_a_lot_of_business_credit_built_up__c</fullName>
        <description>Do you have a lot of business credit built up?</description>
        <inlineHelpText>Do you have a lot of business credit built up?</inlineHelpText>
        <label>Have a lot of business credit built up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_gallons_Bulk_Fuel__c</fullName>
        <description>How many gallons Bulk Fuel?</description>
        <inlineHelpText>Enter the range of annual bulk fuel gallons</inlineHelpText>
        <label>How many gallons Bulk Fuel?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0K-20K</fullName>
                </value>
                <value>
                    <fullName>20K-40K</fullName>
                </value>
                <value>
                    <fullName>40K-60K</fullName>
                </value>
                <value>
                    <fullName>60K-100K</fullName>
                </value>
                <value>
                    <fullName>100K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_quickly_are_you_paid_for_your_loads__c</fullName>
        <description>How quickly are you currently getting paid for your loads?</description>
        <inlineHelpText>How quickly are you currently getting paid for your loads?</inlineHelpText>
        <label>How quickly are you paid for your loads?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
                <value>
                    <fullName>7 days or less</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_a_trade_card_program_suitable__c</fullName>
        <description>AU Field. Used to assess suitable for the trade card program</description>
        <label>Is a trade card program suitable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the name of the Lead to link to FEP</description>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>FEP</relationshipLabel>
        <relationshipName>FEP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Looking_to_aggressively_grow_fleet__c</fullName>
        <description>Are you looking to aggressively grow your fleet? ( Fleets that grow at a rapid rate often don’t have good enough business credit to keep up with the rate of their ambitious growth therefore they are forced to either split their volume between cards or their growth is stifled due to their credit not growing as fast as their company).</description>
        <inlineHelpText>Are you looking to aggressively grow your fleet? ( Fleets that grow at a rapid rate often don’t have good enough business credit to keep up with the rate of their ambitious growth therefore they are forced to either split their volume between cards or the</inlineHelpText>
        <label>Looking to aggressively grow fleet?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mastercard_PCard_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCard Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mastercard_PCard_Spend__c</fullName>
        <label>PCard Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mastercard_T_E_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>T&amp;E Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mastercard_T_E_Spend__c</fullName>
        <label>T&amp;E Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Receivables__c</fullName>
        <description>Monthly Receivables</description>
        <inlineHelpText>Enter current Monthly Receivables</inlineHelpText>
        <label>Monthly Receivables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Fuel_Contact_Email__c</fullName>
        <formula>Non_Fuel_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Fuel Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Fuel_Contact_Phone__c</fullName>
        <formula>Non_Fuel_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Fuel Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Fuel_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The best contact for non-fuel opportunities</description>
        <label>Non-Fuel Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Non-Fuel Contact)</relationshipLabel>
        <relationshipName>FEPPgNh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Bulk_Gallons__c</fullName>
        <inlineHelpText>This field is going away, please populate the &quot;How many gallons Bulk Fuel?&quot; field instead</inlineHelpText>
        <label>*Number of Bulk Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Cards</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Checks__c</fullName>
        <description>Number of paper checks for payroll</description>
        <inlineHelpText>Enter the number of paper checks cut for payroll</inlineHelpText>
        <label>What is the # of checks cut for Payroll?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <description>Number of sites for Fuel Management</description>
        <inlineHelpText>Number of sites for Fuel Management</inlineHelpText>
        <label>Number of Sites?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_Fuel_Contact_Email__c</fullName>
        <formula>OTR_Fuel_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTR Fuel Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_Fuel_Contact_Phone__c</fullName>
        <formula>OTR_Fuel_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTR Fuel Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_Fuel_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OTR Fuel Contact Name</description>
        <inlineHelpText>Enter OTR Fuel Contact Name</inlineHelpText>
        <label>OTR Fuel Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (OTR Fuel Contact)</relationshipLabel>
        <relationshipName>FEP3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_Notes__c</fullName>
        <description>Notes for OTR Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for OTR Follow Up</inlineHelpText>
        <label>OTR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_to_idea_of_factoring_receivables__c</fullName>
        <description>Are you open to the idea of factoring your receivables?</description>
        <inlineHelpText>Are you open to the idea of factoring your receivables?</inlineHelpText>
        <label>Open to idea of factoring receivables?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oversize_Overweight_Permit_Needs__c</fullName>
        <description>Do you ever have oversize or overweight permit needs?</description>
        <inlineHelpText>Do you ever have oversize or overweight permit needs?</inlineHelpText>
        <label>Oversize / Overweight Permit Needs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_someone_to_do_your_permits_now__c</fullName>
        <description>Do you pay someone to do your permits now?</description>
        <inlineHelpText>Do you pay someone to do your permits now?

*It&apos;s important to note that all of our permits are done online so the person in question needs to be relatively computer savvy. We also do not offer hazardous load permits so this also needs to be uncovered</inlineHelpText>
        <label>Pay someone to do your permits now?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paycard_Contact_Email__c</fullName>
        <formula>Paycard_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paycard Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paycard_Contact_Phone__c</fullName>
        <formula>Paycard_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paycard Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paycard_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PayCard Contact Name</description>
        <inlineHelpText>Enter The PayCard Contact Name</inlineHelpText>
        <label>Paycard Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Paycard Contact)</relationshipLabel>
        <relationshipName>FEP7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paycard_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>*Paycard Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permits_Contact_Email__c</fullName>
        <formula>Permits_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permits Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permits_Contact_Phone__c</fullName>
        <formula>Permits_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permits Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permits_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permits Contact Name</description>
        <inlineHelpText>Enter the Permits Contact Name</inlineHelpText>
        <label>Permits Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Permits Contact)</relationshipLabel>
        <relationshipName>FEP5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permits_Notes__c</fullName>
        <description>Notes for Permits follow up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Permits follow up</inlineHelpText>
        <label>Permits Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <description>Current Preferred Vendor</description>
        <inlineHelpText>Enter the Current Preferred Vendor</inlineHelpText>
        <label>Preferred Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pilot / Flying J</fullName>
                </value>
                <value>
                    <fullName>TA Petro</fullName>
                </value>
                <value>
                    <fullName>Loves</fullName>
                </value>
                <value>
                    <fullName>Independents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact for FEP</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP</relationshipLabel>
        <relationshipName>FEP_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Card_Contact_Email__c</fullName>
        <formula>Purchase_Card_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Card Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Card_Contact_Phone__c</fullName>
        <formula>Purchase_Card_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Card Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Card_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Purchase Card Contact Name</description>
        <inlineHelpText>Enter The Purchase Card Contact Name</inlineHelpText>
        <label>Purchase Card Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Purchase Card Contact)</relationshipLabel>
        <relationshipName>FEP9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Card_Contract_Expiration__c</fullName>
        <description>Enter the date that the current purchasing card contract expires.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the current purchasing card contract expires.</inlineHelpText>
        <label>Purchase Card Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Card_Notes__c</fullName>
        <description>Notes for Purchase Card Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Purchase Card Follow Up</inlineHelpText>
        <label>Purchase Card Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rapid_Notes__c</fullName>
        <description>Notes for Rapid Paycard Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Rapid Paycard Follow Up</inlineHelpText>
        <label>Rapid! Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Current__c</fullName>
        <label>Role - Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Planner</fullName>
                </value>
                <value>
                    <fullName>Expeditor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Future__c</fullName>
        <label>Role - Future</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Planner</fullName>
                </value>
                <value>
                    <fullName>Expeditor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is being replaced by notes for each product line.  Please copy/paste strategy notes to the appropriate product section.</inlineHelpText>
        <label>*Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telapoint_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Telapoint Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telapoint__c</fullName>
        <label>Telapoint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telematics_Contact_Email__c</fullName>
        <formula>Telematics_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telematics Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telematics_Contact_Phone__c</fullName>
        <formula>Telematics_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telematics Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telematics_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Telematics Contact</description>
        <inlineHelpText>Enter name of Telematics Contact</inlineHelpText>
        <label>Telematics Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Telematics Contact)</relationshipLabel>
        <relationshipName>FEP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telematics_Notes__c</fullName>
        <description>Notes for Telematics follow up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Telematics follow up</inlineHelpText>
        <label>Telematics Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telematics_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Telematics Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Non_Fuel_Spend__c</fullName>
        <description>AU Field. Total annual spend on non-fuel purchases. e.g. Vehicle maintenance, Taxi, Roadside Assistance</description>
        <label>Total Annual Non-Fuel Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Installed_Units__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Installed Units</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Units__c</fullName>
        <label>Total Potential Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_fuel_card_opportunity__c</fullName>
        <description>AU addition. The total number of cards the customer has in operation.</description>
        <inlineHelpText>The total number of fuel cards the customer has in operation.</inlineHelpText>
        <label>Total Fuel Card Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Card_Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Card Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Card_Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Card Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Card_Notes__c</fullName>
        <description>AU field. Used to take notes in relation to the trade card product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trade Card Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_card_contract_expiry__c</fullName>
        <description>The expiry of the current trade card contract.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trade card contract expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_permits_for_different_states__c</fullName>
        <description>Do you need trip permits for different states?</description>
        <inlineHelpText>Do you need trip permits for different states?</inlineHelpText>
        <label>Trip permits for different states?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trucks_come_home_at_night__c</fullName>
        <description>OTR Fuel Question: Do your trucks come home every night?</description>
        <label>Trucks come home at night?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIrtual_Notes__c</fullName>
        <description>Notes for Virtual follow up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Virtual follow up</inlineHelpText>
        <label>VIrtual Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Maint_Contact_Email__c</fullName>
        <formula>Vehicle_Maint_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Maint Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Maint_Contact_Phone__c</fullName>
        <formula>Vehicle_Maint_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Maint Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Maint_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vehicle Maintenance Contact Name</description>
        <inlineHelpText>Enter Vehicle Maintenance Contact Name</inlineHelpText>
        <label>Vehicle Maint Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Vehicle Maint Contact)</relationshipLabel>
        <relationshipName>FEP2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Maintenance_Notes__c</fullName>
        <description>Notes for Vehicle Maintenance Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Vehicle Maintenance Follow Up</inlineHelpText>
        <label>Vehicle Maintenance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicles_buy_Deisel_from_Truck_Stops__c</fullName>
        <description>Do your vehicles buy diesel primarily from truck stops?</description>
        <label>Vehicles buy Diesel from Truck Stops?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtual_Card_Solution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>*Virtual Card Solution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Card_Spend__c</fullName>
        <label>Virtual Card Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Contact_Email__c</fullName>
        <formula>Virtual_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Virtual Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Contact_Phone__c</fullName>
        <formula>Virtual_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Virtual Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Virtual Contact Name</description>
        <inlineHelpText>Enter The Virtual Contact Name</inlineHelpText>
        <label>Virtual Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Virtual Contact)</relationshipLabel>
        <relationshipName>FEP8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WESN_Spend__c</fullName>
        <label>WESN Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WESN_for_Service__c</fullName>
        <inlineHelpText>This field is going away, please populate &quot;What is your Vehicle Maintenance Method&quot; instead.</inlineHelpText>
        <label>*WESN for Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_Epayables_Spend__c</fullName>
        <label>What is your Epayables Spend?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-3M</fullName>
                </value>
                <value>
                    <fullName>3-5M</fullName>
                </value>
                <value>
                    <fullName>5-10M</fullName>
                </value>
                <value>
                    <fullName>10-20M</fullName>
                </value>
                <value>
                    <fullName>20-50M</fullName>
                </value>
                <value>
                    <fullName>50-100M</fullName>
                </value>
                <value>
                    <fullName>100M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_Payroll_method__c</fullName>
        <description>What is your Payroll method?</description>
        <inlineHelpText>Select current Payroll methods</inlineHelpText>
        <label>What is your Payroll method?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Paper Checks</fullName>
                </value>
                <value>
                    <fullName>Paycard</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_Vehicle_Maintenance_Method__c</fullName>
        <description>What is your Vehicle Maintenance Method?</description>
        <inlineHelpText>Select vehicle maintenance method</inlineHelpText>
        <label>What is your Vehicle Maintenance Method?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Express Code</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>In House Account</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>P.O.</fullName>
                </value>
                <value>
                    <fullName>PCard</fullName>
                </value>
                <value>
                    <fullName>WESN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>